--- a/resources/css/filament/admin/theme.css
+++ b/resources/css/filament/admin/theme.css
@@ -1,3 +1,8 @@
 @import '/vendor/filament/filament/resources/css/theme.css';
 
 @config 'tailwind.config.js';
+
+.hljs {
+    background: none !important;
+    @apply !bg-gray-800 dark:bg-gray-800;
+}
